--- a/index.html
+++ b/index.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PORTFOLIO</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-</head>
-</head>
-<body>
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="container">
-      <div class="logo"><a href="index.html"><i class="fa-solid fa-house"></i> HOME</a></div>
-      <div class="nav">
-        <ul>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="project.html">PROJECT</a></li>
-        <li><a href="team.html">TEAM</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PORTFOLIO</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+  </head>
 
-  <!-- Main Section -->
-  <section id="main">
-    <div class="container">
-      <h1></h1>
-
-      <div class="big-slideshow-container">
-        <div class="slideshow-container">
-          <div class="mySlides fade">
-            <img src="img/slide1.png" alt="슬라이드 1 이미지">
-          </div>
-          <div class="mySlides fade">
-            <img src="img/slide2.png" alt="슬라이드 2 이미지">
-          </div>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">
+          <a href="index.html"><i class="fa-solid fa-house"></i> HOME</a>
         </div>
-
-        <div class="big-dot">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
+        <div class="nav">
+          <ul>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="project.html">PROJECT</a></li>
+            <li><a href="team.html">TEAM</a></li>
+          </ul>
         </div>
       </div>
-    </div>
-  </section>
-  <!-- Footer -->
-  <footer>
-<div class="container">
-  <p>© 2025. Won Jong Eun. All rights reserved.</p>
-</div>
-  </footer>
-<script src="main.js"></script>
-</body>
+    </nav>
+
+    <!-- Main Section -->
+    <section id="main">
+      <div class="container">
+        <h1></h1>
+
+        <div class="big-slideshow-container">
+          <div class="slideshow-container">
+            <div class="mySlides fade">
+              <img src="img/slide1.png" alt="슬라이드 1 이미지" />
+            </div>
+            <div class="mySlides fade">
+              <img src="img/slide2.png" alt="슬라이드 2 이미지" />
+            </div>
+          </div>
+
+          <div class="big-dot">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <p>© 2025. Won Jong Eun. All rights reserved.</p>
+      </div>
+    </footer>
+    <script src="main.js"></script>
+  </body>
 </html>
