--- a/project.html
+++ b/project.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,7 +49,7 @@
   <button class="task-toggle">과제 3 - HTMLPRAC <span class="arrow">▼</span></button>
   <div class="task-content">
     <div class="task-text">
-      <p>이 프로젝트는 HTML/CSS를 활용한 두 번째 웹 프로젝트입니다.</p>
+      <p>이 프로젝트는 HTML/CSS를 활용한 두 번째 웹 프로젝트입니다.</p><a href="hemlprac.vercel.app">hemlprac.vercel.app</a>
     </div>
   </div>
 
