--- a/about.html
+++ b/about.html
@@ -1,66 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PORTFOLIO</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-</head>
-</head>
-<body>
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="container">
-      <div class="logo"><a href="index.html"><i class="fa-solid fa-house"></i> HOME</a></div>
-      <div class="nav">
-        <ul>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="project.html">PROJECT</a></li>
-        <li><a href="team.html">TEAM</a></li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PORTFOLIO</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Nanum+Pen+Script&display=swap"
+      rel="stylesheet"
+    /> -->
+  </head>
+
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">
+          <a href="index.html"><i class="fa-solid fa-house"></i> HOME</a>
+        </div>
+        <div class="nav">
+          <ul>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="project.html">PROJECT</a></li>
+            <li><a href="team.html">TEAM</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <!-- Self-Introduce --> 
-  
-  <section class="selfintroduce">
-    <div class="selfintroduce-box">
-      <section class="about-box">
-    <div class="profile-img">
-      <img src="img/my-photo.jpg" alt="내 프로필 사진">
-    </div>
-    <div class="profile-info">
-      <h1>원종은</h1>
-      <ul>
-        <li><strong>생년월일:</strong> 2005.02.24</li>
-        <li><strong>위치:</strong> 경기도 파주시</li>
-        <li><strong>연락처:</strong> 010-2213-8691</li>
-        <li><strong>이메일</strong> wjy2024@gmail.com</li>
-        <li><strong>학교&학과:</strong>중부대학교 정보보호학과</li>
-      </ul>
-    </div>
-    <div id="typing-text"></div>
-    <button id="toggle-btn"><i class="fa-solid fa-chevron-down"></i></button>
-    <div id="more-info">
-      <p>호로루루루루룰ㄹ</p>
-      <p><i class="fa-brands fa-github"></i> <a href="https://github.com/euniii0224">github</a></p>
-    </div>
-  </section>
-    </div>
-  </section>
+    <!-- Self-Introduce -->
 
+    <section class="selfintroduce">
+      <div class="selfintroduce-box">
+        <section class="about-box">
+          <div class="profile-img">
+            <img src="img/my-photo.jpg" alt="내 프로필 사진" />
+          </div>
+          <div class="profile-info">
+            <h1>원종은</h1>
+            <ul>
+              <li><strong>생년월일:</strong> 2005.02.24</li>
+              <li><strong>위치:</strong> 경기도 파주시</li>
+              <li><strong>연락처:</strong> 010-2213-8691</li>
+              <li><strong>이메일</strong> wjy2024@gmail.com</li>
+              <li><strong>학교&학과:</strong>중부대학교 정보보호학과</li>
+            </ul>
+          </div>
+          <div id="typing-text"></div>
+          <button id="toggle-btn">
+            <i class="fa-solid fa-chevron-down"></i>
+          </button>
+          <div id="more-info">
+            <p>
+              <i class="fa-brands fa-github"></i>
+              <a href="https://github.com/euniii0224">github</a>
+            </p>
+          </div>
+        </section>
+        <div class="mbti-box">
+          <h2>MBTI</h2>
+          <ul class="mbti-list">
+            <li>
+              <strong>I</strong>
+              <div class="bar-container">
+                <div class="bar" data-percent="65"></div>
+              </div>
+              <span class="percent-text"> 65%</span>
+            </li>
+            <li>
+              <strong>S</strong>
+              <div class="bar-container">
+                <div class="bar" data-percent="80"></div>
+              </div>
+              <span class="percent-text"> 80%</span>
+            </li>
+            <li>
+              <strong>T</strong>
+              <div class="bar-container">
+                <div class="bar" data-percent="56"></div>
+              </div>
+              <span class="percent-text"> 56%</span>
+            </li>
+            <li>
+              <strong>J</strong>
+              <div class="bar-container">
+                <div class="bar" data-percent="67"></div>
+              </div>
+              <span class="percent-text"> 67%</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-<div class="container">
-  <p>© 2025. Won Jong Eun. All rights reserved.</p>
-</div>
-  </footer>
-<script src="about.js"></script>
-</body>
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <p>© 2025. Won Jong Eun. All rights reserved.</p>
+      </div>
+    </footer>
+    <script src="about.js"></script>
+  </body>
 </html>
