--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         </div>
         <div class="nav">
           <ul>
-            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="about.html" class="active">ABOUT</a></li>
             <li><a href="project.html">PROJECT</a></li>
             <li><a href="team.html">TEAM</a></li>
           </ul>
@@ -43,7 +43,9 @@
             <img src="img/my-photo.jpg" alt="내 프로필 사진" />
           </div>
           <div class="profile-info">
-            <h1>원종은</h1>
+            <!-- <span id="typing-text"></span> -->
+
+            <h1 id="typing-text"></h1>
             <ul>
               <li><strong>생년월일:</strong> 2005.02.24</li>
               <li><strong>위치:</strong> 경기도 파주시</li>
