--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
   </head>
 
   <body>
+    <canvas
+      id="snow"
+      style="position: fixed; top: 0; left: 0; pointer-events: none"
+    ></canvas>
+
     <!-- Navbar -->
     <nav class="navbar">
       <div class="container">
         <div class="logo">
-          <a href="index.html"><i class="fa-solid fa-house"></i> HOME</a>
+          <a href="index.html" class="active"
+            ><i class="fa-solid fa-house"></i> HOME</a
+          >
         </div>
         <div class="nav">
           <ul>
