--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
       <div class="nav">
         <ul>
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="project.html">PROJECT</a></li>
+        <li><a href="project.html" class="active">PROJECT</a></li>
         <li><a href="team.html">TEAM</a></li>
         </ul>
       </div>
