--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
         <ul>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="project.html">PROJECT</a></li>
-        <li><a href="team.html">TEAM</a></li>
+        <li><a href="team.html" class="active">TEAM</a></li>
         </ul>
       </div>
     </div>
