--- a/project.html
+++ b/project.html
@@ -21,7 +21,7 @@
         <ul>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="project.html" class="active">PROJECT</a></li>
-        <li><a href="team.html">TEAM</a></li>
+        <li><a href="https://final-teamproject.vercel.app/">TEAM</a></li>
         </ul>
       </div>
     </div>
@@ -34,7 +34,9 @@
   <div class="task-content">
     <div class="task-text">
       <p>이 프로젝트는 HTML/CSS를 활용한 첫 번째 웹 프로젝트입니다.</p>
-      <a href="https://hcjdemo-lemon.vercel.app/">https://hcjdemo-lemon.vercel.app/</a>
+      <div class="task-images">
+      
+      <a href="https://hcjdemo-lemon.vercel.app/"><img src="img/_1.jpeg" alt=""></a></div>
     </div>
   </div>
 
@@ -42,14 +44,17 @@
   <div class="task-content">
     <div class="task-text">
       <p>세계 보안 엑스포 (SECON 2025) 참석후기</p>
-      <a href="https://portfolio-six-alpha-99.vercel.app/secon.html">secon.html</a>
+            <div class="task-images">
+      <a href="https://portfolio-six-alpha-99.vercel.app/secon.html"><img src="/img/_2.jpeg" alt=""></a></div>
     </div>
   </div>
 
   <button class="task-toggle">과제 3 - HTMLPRAC <span class="arrow">▼</span></button>
   <div class="task-content">
     <div class="task-text">
-      <p>이 프로젝트는 HTML/CSS를 활용한 두 번째 웹 프로젝트입니다.</p><a href="hemlprac.vercel.app">hemlprac.vercel.app</a>
+      <p>이 프로젝트는 HTML/CSS를 활용한 두 번째 웹 프로젝트입니다.</p>
+      <div class="task-images">
+      <a href="https://hemlprac.vercel.app/"><img src="/img/_3.jpeg" alt=""></a></div>
     </div>
   </div>
 
@@ -57,9 +62,11 @@
   <div class="task-content">
     <div class="task-text">
       <p>중간고사 팀 프로젝트 홈페이지</p>
-      <a href="https://team-project-blue.vercel.app/">https://team-project-blue.vercel.app/</a>
+      <div class="task-images">
+      <a href="https://team-project-blue.vercel.app/"><img src="/img/_4.jpeg" alt=""></a></div>
       <p>중간고사 개인 프로젝트 홈페이지</p>
-      <a href="https://portfolio-six-alpha-99.vercel.app/">https://portfolio-six-alpha-99.vercel.app/</a>
+      <div class="task-images">
+      <a href="https://portfolio-six-alpha-99.vercel.app/"><img src="/img/_5.jpeg" alt=""></a></div>
     </div>
   </div>
 
