--- a/team.html
+++ b/team.html
@@ -17,21 +17,104 @@
         <ul>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="project.html">PROJECT</a></li>
-        <li><a href="team.html" class="active">TEAM</a></li>
+        <li><a href="https://final-teamproject.vercel.app/" class="active">TEAM</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- Project -->
+  <div class="team-page">
   <section class="selfintroduce">
     <div class="selfintroduce-box">
       <section class="about-box">
+        <div class="team-img">
+          <a href="https://final-teamproject.vercel.app/">
+            <img src="/img/_6.jpeg" alt="">
+          </a>
+        </div>
     <div class="profile-img">
       </div>
       </section>
       </div>
       </section>
+<!--<section class="team-section">
+  <h2>👨‍💻TEAM MEMBERS</h2>
+  <div id="typing-name-container" class="profile-box">
+    <a href="https://portfolio-dusky-six-54.vercel.app/" id="typing-name" title="박민영 - 92410756, GitHub" target="_blank"></a>
+    <div class="profile-details">
+      <p>박민영</p>
+      <p>92410756</p>
+      <p><a href="https://github.com/minyeong0125" target="_blank">GitHub</a></p>
+    </div>
+  </div>
+</section> -->
+<!-- 팀원 소개 영역 -->
+<section class="team-section">
+  <h2>👨‍💻 TEAM MEMBERS</h2>
+  <button class="scroll-btn left-btn">&lt;</button>
+  <div class="team-container">
+<div class="team-track">
+    <!-- 팀원 카드 1 -->
+    <div class="member-card">
+      <h3>박민영</h3>
+      <p class="role">92410756</p>
+      <p class="intro">사용자 중심의 웹 개발과 인터랙션 구현에 관심이 많습니다.</p>
+      <div class="links">
+        <a href="https://github.com/minyeong0125" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://portfolio-dusky-six-54.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
+      </div>
+    </div>
+
+
+    <!-- 팀원 카드 2 -->
+    <div class="member-card">
+      <h3>송미강</h3>
+      <p class="role">92410794</p>
+      <p class="intro">Node.js와 데이터베이스 설계에 자신 있습니다.</p>
+      <div class="links">
+        <a href="https://github.com/hong1234" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+      </div>
+    </div>
+
+        <div class="member-card">
+      <h3>원종은</h3>
+      <p class="role">92410823</p>
+      <p class="intro">Node.js와 데이터베이스 설계에 자신 있습니다.</p>
+      <div class="links">
+        <a href="https://github.com/hong1234" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+      </div>
+    </div>
+
+        <div class="member-card">
+      <h3>이성혜</h3>
+      <p class="role">92415548</p>
+      <p class="intro">Node.js와 데이터베이스 설계에 자신 있습니다.</p>
+      <div class="links">
+        <a href="https://github.com/hong1234" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+      </div>
+    </div>
+
+        <div class="member-card">
+      <h3>허다현</h3>
+      <p class="role">92410990</p>
+      <p class="intro">Node.js와 데이터베이스 설계에 자신 있습니다.</p>
+      <div class="links">
+        <a href="https://github.com/hong1234" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+      </div>
+    </div>
+    </div>
+
+  </div>
+  <button class="scroll-btn right-btn">&gt;</button>
+</section>
+
+
+
 
 
   <!-- Footer -->
@@ -40,6 +123,6 @@
   <p>© 2025. Won Jong Eun. All rights reserved.</p>
 </div>
   </footer>
-<script src=""></script>
+<script src="team.js"></script>
 </body>
 </html>
