--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       <div class="selfintroduce-box">
         <section class="about-box">
           <div class="profile-img">
-            <img src="img/my-photo.jpg" alt="내 프로필 사진" />
+            <img src="img/놀자곰1.png" alt="내 프로필 사진" />
           </div>
           <div class="profile-info">
             <!-- <span id="typing-text"></span> -->
