--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
         <ul>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="project.html">PROJECT</a></li>
-        <li><a href="https://final-teamproject.vercel.app/" class="active">TEAM</a></li>
+        <li><a href="team.html" class="active">TEAM</a></li>
         </ul>
       </div>
     </div>
@@ -52,9 +52,8 @@
 <!-- 팀원 소개 영역 -->
 <section class="team-section">
   <h2>👨‍💻 TEAM MEMBERS</h2>
-  <button class="scroll-btn left-btn">&lt;</button>
   <div class="team-container">
-<div class="team-track">
+
     <!-- 팀원 카드 1 -->
     <div class="member-card">
       <h3>박민영</h3>
@@ -73,8 +72,8 @@
       <p class="role">92410794</p>
       <p class="intro">Node.js와 데이터베이스 설계에 자신 있습니다.</p>
       <div class="links">
-        <a href="https://github.com/hong1234" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+        <a href="https://github.com/JunByung2" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://song-s-portfolio.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
       </div>
     </div>
 
@@ -83,8 +82,8 @@
       <p class="role">92410823</p>
       <p class="intro">Node.js와 데이터베이스 설계에 자신 있습니다.</p>
       <div class="links">
-        <a href="https://github.com/hong1234" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+        <a href="https://github.com/euniii0224" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://final-portfolio-liard.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
       </div>
     </div>
 
@@ -93,8 +92,8 @@
       <p class="role">92415548</p>
       <p class="intro">Node.js와 데이터베이스 설계에 자신 있습니다.</p>
       <div class="links">
-        <a href="https://github.com/hong1234" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+        <a href="https://github.com/SuNghYe414" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://final-my.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
       </div>
     </div>
 
@@ -103,14 +102,12 @@
       <p class="role">92410990</p>
       <p class="intro">Node.js와 데이터베이스 설계에 자신 있습니다.</p>
       <div class="links">
-        <a href="https://github.com/hong1234" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+        <a href="https://github.com/chick127" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://final-task-xi.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
       </div>
-    </div>
     </div>
 
   </div>
-  <button class="scroll-btn right-btn">&gt;</button>
 </section>
 
 
