--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <ul>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="project.html">PROJECT</a></li>
-            <li><a href="https://final-teamproject.vercel.app/">TEAM</a></li>
+            <li><a href="team.html">TEAM</a></li>
           </ul>
         </div>
       </div>
