--- a/project.html
+++ b/project.html
@@ -21,7 +21,7 @@
         <ul>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="project.html" class="active">PROJECT</a></li>
-        <li><a href="https://final-teamproject.vercel.app/">TEAM</a></li>
+        <li><a href="team.html">TEAM</a></li>
         </ul>
       </div>
     </div>
